--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "type": "symfony-bundle",
-    "name": "sk/math",
+    "name": "kuznetsovsite/math",
     "description": "Math plugin",
     "license": "proprietary",
     "require": {
@@ -28,24 +28,6 @@
     "autoload-dev": {
         "psr-4": {
             "Sk\\Math\\Tests\\": "tests/"
-        }
-    },
-    "replace": {
-        "paragonie/random_compat": "2.*",
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php72": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
-    },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "5.0.*"
         }
     }
 }
