--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "ext-iconv": "*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
-        "symfony/yaml": "5.0.*"
+        "symfony/yaml": "5.0.*",
+        "chriskonnertz/string-calc": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "5.7"
