--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,11 @@
         "php": "^7.1.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
-        "symfony/yaml": "5.0.*",
         "chriskonnertz/string-calc": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.7"
+        "phpunit/phpunit": "8.5"
     },
     "config": {
         "preferred-install": {
@@ -30,5 +28,14 @@
         "psr-4": {
             "Sk\\MathBundle\\Tests\\": "tests/"
         }
+    },
+    "replace": {
+        "paragonie/random_compat": "2.*",
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php71": "*",
+        "symfony/polyfill-php70": "*",
+        "symfony/polyfill-php56": "*"
     }
 }
