--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Sk\\MathBundle\\Tests\\": "tests/"
+            "Sk\\MathBundle\\Tests\\": "Tests/"
         }
     }
 }
